@@ -1,38 +1,35 @@
-FROM ruby:3.3.1-bookworm as builder
+FROM ruby:3.3.5-bookworm AS as builder
 
-ARG NAROU_VERSION=3.9.0
-ARG AOZORAEPUB3_VERSION=1.1.1b24Q
+ARG NAROU_VERSION=3.9.1
+ARG AOZORAEPUB3_VERSION=1.1.1b26Q
 ARG AOZORAEPUB3_FILE=AozoraEpub3-${AOZORAEPUB3_VERSION}
 
-RUN gem install narou -v ${NAROU_VERSION} --no-document && \
+RUN apt update && \
+    curl -LO https://download.java.net/java/GA/jdk21/fd2272bbf8e04c3dbaee13770090416c/35/GPL/openjdk-21_linux-x64_bin.tar.gz && \
+    tar zxf openjdk-21_linux-x64_bin.tar.gz && mkdir /opt/jre && \   gem install narou -v ${NAROU_VERSION} --no-document && \
+    mv ./jdk-21/* /opt/jre && \
+    gem install narou -v ${NAROU_VERSION} --no-document && \
     wget https://github.com/kyukyunyorituryo/AozoraEpub3/releases/download/v${AOZORAEPUB3_VERSION}/${AOZORAEPUB3_FILE}.zip && \
     unzip ${AOZORAEPUB3_FILE} -d ${AOZORAEPUB3_FILE} && \
     mv ${AOZORAEPUB3_FILE} /opt/aozoraepub3 
 
-FROM alpine:3.19.1 as jre
-
-RUN apk update && \
-    apk add openjdk21-jdk libjpeg-turbo && \
-    jlink --no-header-files --no-man-pages --compress=2 \
-    --add-modules java.base,java.datatransfer,java.desktop \
-    --output /opt/jre
-
-FROM ruby:3.3.1-alpine3.19
+FROM ruby:3.3.5-slim-bookworm
 
 ARG UID=1000
 ARG GID=1000
 
 COPY --from=builder /usr/local/bundle /usr/local/bundle
 COPY --from=builder /opt/aozoraepub3 /opt/aozoraepub3
-COPY --from=jre /opt/jre /opt/jre
-COPY --from=jre /usr/lib/libjpeg* /usr/lib/
+COPY --from=builder /lib/x86_64-linux-gnu/libjpeg* /lib/x86_64-linux-gnu/
+COPY --from=builder /usr/lib/x86_64-linux-gnu/libjpeg* /usr/lib/x86_64-linux-gnu/
+COPY --from=builder /opt/jre /opt/jre
 COPY init.sh /usr/local/bin
 
 ENV JAVA_HOME=/opt/jre
 ENV PATH="${JAVA_HOME}/bin:${PATH}"
 
-RUN addgroup -g ${GID} narou && \
-    adduser -u ${UID} -G narou -D narou && \
+RUN groupadd -g ${GID} narou && \
+    adduser narou --shell /bin/bash --uid ${UID} --gid ${GID} && \
     chmod +x /usr/local/bin/init.sh
 
 USER narou
